kubernetes-2025/production/deployment.yaml
---
# Source: kubernetes-2025/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-kubernetes-2025
  labels:
    helm.sh/chart: kubernetes-2025-0.1.0
    app.kubernetes.io/name: kubernetes-2025
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: kubernetes-2025
      app.kubernetes.io/instance: release-name
  template:
    metadata:
      labels:
        helm.sh/chart: kubernetes-2025-0.1.0
        app.kubernetes.io/name: kubernetes-2025
        app.kubernetes.io/instance: release-name
        app.kubernetes.io/version: "1.16.0"
        app.kubernetes.io/managed-by: Helm
    spec:
      serviceAccountName: default
      securityContext:
        {}
      containers:
        - name: kubernetes-2025
          securityContext:
            {}
          image: "skswami91/kubernetes-2025:46"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
          resources:
            {}
