kubernetes-2025/production/service.yaml
---
# Source: kubernetes-2025/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-kubernetes-2025
  labels:
    helm.sh/chart: kubernetes-2025-0.1.0
    app.kubernetes.io/name: kubernetes-2025
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: kubernetes-2025
    app.kubernetes.io/instance: release-name
