kubernetes-2025/production/argocd-ingress.yaml
---
# Source: kubernetes-2025/templates/argocd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
        - path: /node-app(/|$)(.*)
          pathType: ImplementationSpecific
          backend:
            service:
              name: release-name-kubernetes-2025
              port:
                number: 80
